--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -13,10 +13,23 @@ jobs:
           fetch-depth: "0"
 
       - name: Bump version and push tag
+        id: tag
         uses: anothrNick/github-tag-action@1.70.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          INITIAL_VERSION: "2.0.3"
           WITH_V: false
           DEFAULT_BUMP: "patch"
           RELEASE_BRANCHES: "master,main,dev"
+
+      - name: Update version file
+        if: steps.tag.outputs.new_tag != ''
+        run: sed -i 's/VERSION = "[^"]*"/VERSION = "new_version"/' sfs.lua
+
+      - name: Commit version file
+        if: steps.tag.outputs.new_tag != ''
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add sfs.lua
+          git commit -m "Update version file to ${{ steps.tag.outputs.new_tag }}"
+          git push origin HEAD:master
