--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,5 +1,3 @@
-# https://github.com/marketplace/actions/github-tag-bump
-
 name: Bump version
 on: push
 jobs:
@@ -21,15 +19,24 @@ jobs:
           DEFAULT_BUMP: "patch"
           RELEASE_BRANCHES: "master,main,dev"
 
+      # Update the version file locally
       - name: Update version file
         if: steps.tag.outputs.new_tag != ''
         run: sed -i 's/VERSION = "[^"]*"/VERSION = "${{ steps.tag.outputs.new_tag }}"/' sfs.lua
 
-      - name: Commit version file
-        if: steps.tag.outputs.new_tag != ''
+      # Get the commit message
+      - name: Extract Commit Message
+        id: extract_commit_message
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add sfs.lua
-          git commit -m "Update version file to ${{ steps.tag.outputs.new_tag }}"
-          git push origin HEAD:master
+          echo "COMMIT_MESSAGE=$(git log -1 --pretty=%B)" >> $GITHUB_ENV
+
+      # Create a release with the updated file and commit message as release notes
+      - name: Create GitHub Release
+        if: steps.tag.outputs.new_tag != ''
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release create "${{ steps.tag.outputs.new_tag }}" \
+          --title "Release ${{ steps.tag.outputs.new_tag }}" \
+          --notes "$COMMIT_MESSAGE" \
+          sfs.lua
