--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,5 +1,13 @@
 name: Bump version
-on: push
+
+on:
+  push:
+    branches:
+      - master
+    paths:
+      - "**"
+      - "!README.MD"
+
 jobs:
   build:
     runs-on: ubuntu-22.04
