--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -6,6 +6,9 @@ on:
       - master
 
 jobs:
+  run-tests:
+    uses: CFC-Servers/GLuaTest/.github/workflows/run_tests.yml@main
+
   build:
     runs-on: ubuntu-22.04
     permissions:
